@@ -47,9 +47,6 @@
       <number>0</number>
      </property>
      <item>
-      <widget class="ToolButton" name="searchButton"/>
-     </item>
-     <item>
       <widget class="GenreCombo" name="genreCombo"/>
      </item>
      <item>
