@@ -50,9 +50,6 @@
       <widget class="ToolButton" name="libraryUpdate"/>
      </item>
      <item>
-      <widget class="ToolButton" name="searchButton"/>
-     </item>
-     <item>
       <spacer name="horizontalSpacer_2">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
